[project]
name = "langchain-rag-chat"
version = "0.1.0"
description = "Langchain implementations"
authors = [
    {name = "Andrean Georgiev"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "langchain-community (>=0.3.20,<0.4.0)",
    "langchain-openai (>=0.3.9,<0.4.0)",
    "pypdf (>=5.4.0,<6.0.0)",
    "chromadb (>=0.6.3,<0.7.0)",
    "langchain-chroma (>=0.2.2,<0.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
